[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["nakatuba <nakatuba0626@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.2"
mecab-python3 = "^1.0.3"
pandas = "^1.2.4"
scikit-learn = "^0.24.1"
torchtext = "^0.9.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.1"
isort = "^5.8.0"
jupyterlab = "^3.0.14"
jupyterlab-code-formatter = "^1.4.10"
jupyterlab-kite = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
